--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -1,7 +1,6 @@
 <h2>Hello World! This is the index page</h2>
 <ul>
-  {% for game in games %}
-    <li>{{ game }}</li>
+  {% for odd in odds %}
+    <li>{{ odd }}</li>
   {% endfor %}
 </ul>
-{{ odds }}
