--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -1,6 +1,6 @@
 <h2>Hello World! This is the index page</h2>
 <ul>
   {% for odd in odds %}
-    <li>{{ odd }}</li>
+     <li>{{ odd.games }}</li>
   {% endfor %}
 </ul>
