--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -1,16 +1,16 @@
 <h2>Hello World! This is the index page</h2>
 
-<form method="post">
+<form method='POST' action='.'>{% csrf_token %}
   <fieldset>
     <legend>Choose max 2 accumulators</legend>
       {% for odd in odds %}
           <input type="checkbox" name="Accumulator" value="Odds" />
-          <strong>Game - </strong>{{ odd.0 }}
-          <strong> Home odds - </strong>{{ odd.1 }}
-          <strong> Draw odds - </strong>{{ odd.2 }}
-          <strong> Away odds - </strong>{{ odd.3 }}
+          <strong>Game - </strong><i id="games">{{ odd.0 }}</i>
+          <strong> Home odds - </strong><i id="home_odds">{{ odd.1 }}</i>
+          <strong> Draw odds - </strong><i id="draw_odds">{{ odd.2 }}</i>
+          <strong> Away odds - </strong><i id="away_odds">{{ odd.3 }}</i>
           <br />
       {% endfor %}
-      <input type="submit" value="Submit now" />
+      <input type="submit" value="Get accumulator" />
   </fieldset>
 </form>
