--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -14,3 +14,7 @@
       <input type="submit" value="Get accumulator" />
   </fieldset>
 </form>
+
+{% for combo in combinations %}
+  {{ combo }}
+{% endfor %}
