--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -15,6 +15,11 @@
   </fieldset>
 </form>
 
-{% for combo in combinations %}
-  {{ combo }}
-{% endfor %}
+<ul>
+  {% for combos in combinations %}
+    <li><strong>Game outcome: </strong>{{ combos.0.1 }} - {{ combos.0.3 }}
+    <strong>Match 1 odd: </strong>{{ combos.1.0 }}
+    <strong>Match 2 odd: </strong>{{ combos.1.1 }}
+    <strong>Accumulator profit: </strong>{{ combos.2 }}</li>
+  {% endfor %}
+</ul>
