--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -11,6 +11,9 @@
           <strong> Away odds - </strong><i name="away" id="away_odds">{{ odd.3 }}</i>
           <br />
       {% endfor %}
+      <p>
+        Stake £: <input id="stake" name="stake" type="text" placeholder="Enter stake here"
+      </p>
       <input type="submit" value="Get accumulator" />
   </fieldset>
 </form>
