--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -22,7 +22,7 @@
   {% if match != None %}
     <b>{{ match.0 }}</b> and <b>{{ match.1 }}</b>
     <h4>Stake is: £{{ stake }}</h4>
-    <h4>Total stake for {{ total_games }} game(s) is £{{ total_stake }}</h4>
+    <h4>Total stake for {{ total_games }} possible outcomes is £{{ total_stake }}</h4>
   {% endif %}
 </p>
 
