--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -20,7 +20,7 @@
 
 <p>
   {% if match != None %}
-    <b>{{ match.0 }}</b> and <b>{{ match.1 }}</b>
+    <b>{{ match.0 }}</b> and <b>{{ match.1 }}</b> and <b>{{ match.2 }}</b>
     <h4>Stake is: £{{ stake }}</h4>
     <h4>Total stake for {{ total_games }} possible outcomes is £{{ total_stake }}</h4>
   {% endif %}
