--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -81,21 +81,22 @@
          <b>{{ match.0 }}</b> and <b>{{ match.1 }}</b> and <b>{{ match.2 }}
         {% endif %}
         {% if length_combo == 4 %}
-         <b>{{ match.0 }}</b> and <b>{{ match.1 }}</b> and <b>{{ match.2 }} and <b>{{ match.3 }}</b>
+         <b>{{ match.0 }}</b> and <b>{{ match.1 }}</b> and <b>{{ match.2 }}</b> and <b>{{ match.3 }}</b>
         {% endif %}
         <h4>Stake is: £{{ stake }}</h4>
         <h4>Total stake for {{ total_games }} possible outcomes is £{{ total_stake }}</h4>
         <h4>Total combinations below total stake costs (making a loss) is <b>{{ calculation.0 }}</b> and combinations above (for profit) total stake is <b>{{ calculation.1 }}</b> </h4>
+        <h4>As a result <b>{{ calc_in_percent.0 }}%</b> is total loss from <b>{{ total_stake }}</b> possible outcomes, and <b>{{ calc_in_percent.1 }}%</b> is total profit from <b>{{ total_stake }}</b> possible outcomes</h4>
       </p>
       <hr />
       <table class="table table-bordered">
         <thead>
           <tr>
             <th>Game outcome</th>
-            <th>Match outcome 1</th>
-            <th>Match outcome 2</th>
-            <th>Match outcome 3</th>
-            <th>Match outcome 4</th>
+            <th>Match odds 1</th>
+            <th>Match odds 2</th>
+            <th>Match odds 3</th>
+            <th>Match odds 4</th>
             <th>Gross profit from stake of £{{ total_stake }}</th>
             <th>Net profit from stake of £{{ total_stake }}</th>
           </tr>
