--- a/templates/accumulator/william_hill/accumulators.html
+++ b/templates/accumulator/william_hill/accumulators.html
@@ -1,80 +1,24 @@
-{% load staticfiles %}
+{% extends 'accumulator/base.html' %}
 
-<html>
-<head>
-  <title>Group Accumulator</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-  <link rel="stylesheet" href="{% static 'css/main.css' %}" />
-</head>
-<body>
-
-  <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Logo</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<div class="container-fluid text-center">
-  <div class="row content">
-    <div class="col-sm-2 sidenav">
-      <!--<p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>-->
-    </div>
-    <div class="col-sm-8 text-left">
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th>Games</th>
-            <th>Home</th>
-            <th>Draw</th>
-            <th>Away</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for game in games %}
-            <tr>
-              <td><i>{{ game.0 }}</i></td>
-              <td><i>{{ game.1.0 }}</i></td>
-              <td><i>{{ game.1.1 }}</i></td>
-              <td><i>{{ game.1.2 }}</i></td>
-            </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    <div class="col-sm-2 sidenav"><!----------------------------->
-      <!--<div class="well">
-        <p>ADS</p>
-      </div>
-      <div class="well">
-        <p>ADS</p>-->
-      </div>
-    </div>
-  </div>
-</div>
-
-<footer class="container-fluid text-center">
-  <!--<p>Footer Text</p>-->
-</footer>
-
-</body>
-</html>
+{% block content %}
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <th>Games</th>
+      <th>Home</th>
+      <th>Draw</th>
+      <th>Away</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for game in games %}
+      <tr>
+        <td><i>{{ game.0 }}</i></td>
+        <td><i>{{ game.1.0 }}</i></td>
+        <td><i>{{ game.1.1 }}</i></td>
+        <td><i>{{ game.1.2 }}</i></td>
+      </tr>
+    {% endfor %}
+  </tbody>
+</table>
+{% endblock %}
