--- a/templates/accumulator/william_hill/william_hill_0.html
+++ b/templates/accumulator/william_hill/william_hill_0.html
@@ -4,7 +4,7 @@
 <div class="row" id='refresh_padding'>
   <div class="col-sm-8"></div>
   <div class="col-sm-4">
-    <a href="{% url 'refresh_page' %}" >Click here to refresh</a>
+    <a href="{% url 'william_hill_0' refresh_no=1 %}" >Click here to refresh</a>
     <b><i>This was refreshed at time</i></b>
   </div>
 </div>
