--- a/templates/accumulator/base.html
+++ b/templates/accumulator/base.html
@@ -55,6 +55,9 @@
 </div>
 
 <footer class="container-fluid text-center">
+  <p>
+    This is the footer
+  </p>
   <!--<p>Footer Text</p>-->
 </footer>
 
