--- a/templates/accumulator/bookies.html
+++ b/templates/accumulator/bookies.html
@@ -1,6 +1,11 @@
 {% extends 'accumulator/base.html' %}
 
 {% block content %}
+{% if message %}
+  {% for msg in message %}
+    <h3>{{ msg }}</h3>
+  {% endfor %}
+{% endif %}
 <h3>Here is a list of all the bookies listed so far</h3>
 <table class='table table-bordered'>
   <thead>
