--- a/templates/accumulator/william_hill/main_william_hill.html
+++ b/templates/accumulator/william_hill/main_william_hill.html
@@ -12,7 +12,7 @@
   <tbody>
     {% for get_match in get_matches %}
     <tr>
-      <td>{{ get_match }}</td>
+      <td>{{ get_match.dates_of_games }}</td>
       <td><a href="http://localhost:8000/william_hill_games_{{ forloop.counter0 }}/0">Click here to refresh and view all games</a></td>
     </tr>
     {% endfor %}
