--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -6,6 +6,8 @@
   <title>Group Accumulator</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="{% static 'css/main.css' %}" />
 </head>
 <body>
@@ -44,6 +46,17 @@
     <div class="col-sm-8 text-left">
       <h4>{{ infos.0.0 }}</h4>
       <h5>{{ infos.0.1 }}</h5>
+      <h5>
+        <div class="dropdown">
+          <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">View all Bookies
+          <span class="caret"></span></button>
+          <ul class="dropdown-menu">
+            {% for bookie in bookies %}
+              <li><a href="{% url 'accumulator' slug=bookie.bookies_name %}">{{ bookie.bookies_name }}</a></li>
+            {% endfor %}
+          </ul>
+        </div>
+      </h5>
       <form method='POST' action='.'>{% csrf_token %}
       <table class="table table-bordered">
         <thead>
