--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -147,8 +147,18 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <!--<p>Footer Text</p>-->
+  <p id='sayHello'></p>
+  <p id='numVal'></p>
+  <p id='carType'></p>
 </footer>
-
+<!-- <script src="{% static 'js/sample.js' %}" /></script> -->
+<!-- <script src="{% static 'js/sample2.js' %}" /></script> -->
+<!-- <script src="{% static 'js/sample3.js' %}" /></script> -->
+<!-- <script src="{% static 'js/sample4.js' %}" /></script> -->
+<!-- <script src="{% static 'js/sample5.js' %}" /></script> -->
+<!-- <script src="{% static 'js/sample6.js' %}" /></script> -->
+<!-- <script src="{% static 'js/sample7.js' %}"></script> -->
+<!-- <script src="{% static 'js/sample8.js' %}"></script> -->
+<script type="module" src="{% static 'js/sample9.js' %}"></script>
 </body>
 </html>
