--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -159,6 +159,6 @@
 <!-- <script src="{% static 'js/sample6.js' %}" /></script> -->
 <!-- <script src="{% static 'js/sample7.js' %}"></script> -->
 <!-- <script src="{% static 'js/sample8.js' %}"></script> -->
-<script type="module" src="{% static 'js/sample9.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/async.js' %}"></script>
 </body>
 </html>
