--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -147,18 +147,8 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p id='sayHello'></p>
-  <p id='numVal'></p>
-  <p id='carType'></p>
+  <p id="results"></p>
 </footer>
-<!-- <script src="{% static 'js/sample.js' %}" /></script> -->
-<!-- <script src="{% static 'js/sample2.js' %}" /></script> -->
-<!-- <script src="{% static 'js/sample3.js' %}" /></script> -->
-<!-- <script src="{% static 'js/sample4.js' %}" /></script> -->
-<!-- <script src="{% static 'js/sample5.js' %}" /></script> -->
-<!-- <script src="{% static 'js/sample6.js' %}" /></script> -->
-<!-- <script src="{% static 'js/sample7.js' %}"></script> -->
-<!-- <script src="{% static 'js/sample8.js' %}"></script> -->
 <script type="text/javascript" src="{% static 'js/async.js' %}"></script>
 </body>
 </html>
