--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -6,8 +6,6 @@
   <title>Group Accumulator</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="{% static 'css/main.css' %}" />
 </head>
 <body>
@@ -47,14 +45,19 @@
       <h4>{{ infos.0.0 }}</h4>
       <h5>{{ infos.0.1 }}</h5>
       <h5>
-        <div class="dropdown">
-          <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">View all Bookies
-          <span class="caret"></span></button>
-          <ul class="dropdown-menu">
-            {% for bookie in bookies %}
-              <li><a href="{% url 'accumulator' slug=bookie.bookies_name %}">{{ bookie.bookies_name }}</a></li>
-            {% endfor %}
-          </ul>
+        <div class="col-sm-2">
+          <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">View all Bookies
+            <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+              {% for bookie in bookies %}
+                <li><a href="{% url 'accumulator' slug=bookie.bookies_name %}">{{ bookie.bookies_name }}</a></li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-2">
+          <p id="results" class="dropdown"></p>
         </div>
       </h5>
       <form method='POST' action='.'>{% csrf_token %}
@@ -147,8 +150,10 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p id="results"></p>
+  <!-- <p id="results"></p> -->
 </footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="{% static 'js/async.js' %}"></script>
 </body>
 </html>
