--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -63,7 +63,7 @@
       {% if main_page_load == 'Nothing' %}
         <div id='main_page_load'></div>
       {% else %}
-      <form method='POST' action='.'>{% csrf_token %}
+      <form method='POST' action='/index/'>{% csrf_token %}
       <table class="table table-bordered">
         <thead>
           <tr>
