--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -60,36 +60,39 @@
           <p id="results" class="dropdown"></p>
         </div>
       </h5>
-      {% if main_page_load == 'Nothing' %}
+      {% if main_page_load == False %}
         <div id='main_page_load'></div>
       {% else %}
-      <form method='POST' action='/index/'>{% csrf_token %}
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th>Games</th>
-            <th>Home Odds</th>
-            <th>Draw Odds</th>
-            <th>Away Odds</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for odd in odds %}
+      {% if each_match == True %}
+        <div id='each_match'></div>
+        <!-- <form method='POST' action='/index/'>{% csrf_token %}
+        <table class="table table-bordered">
+          <thead>
             <tr>
-              <td><input type="checkbox" name="accumulator" value="{{ odd.0 }}" /><i name="game" id="games"> - {{ odd.0 }}</i></td>
-              <td><i name="home" id="home_odds">{{ odd.1 }}</i></td>
-              <td><i name="draw" id="draw_odds">{{ odd.2 }}</i></td>
-              <td><i name="away" id="away_odds">{{ odd.3 }}</i></td>
+              <th>Games</th>
+              <th>Home Odds</th>
+              <th>Draw Odds</th>
+              <th>Away Odds</th>
             </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      <hr />
-      <p>
-        Stake £: <input id="stake" name="stake" type="text" placeholder="Enter stake here" />
-      </p>
-      <input type="submit" value="Get accumulator" />
-      </form>
+          </thead>
+          <tbody>
+            {% for odd in odds %}
+              <tr>
+                <td><input type="checkbox" name="accumulator" value="{{ odd.0 }}" /><i name="game" id="games"> - {{ odd.0 }}</i></td>
+                <td><i name="home" id="home_odds">{{ odd.1 }}</i></td>
+                <td><i name="draw" id="draw_odds">{{ odd.2 }}</i></td>
+                <td><i name="away" id="away_odds">{{ odd.3 }}</i></td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+        <hr />
+        <p>
+          Stake £: <input id="stake" name="stake" type="text" placeholder="Enter stake here" />
+        </p>
+        <input type="submit" value="Get accumulator" />
+        </form> -->
+      {% endif %}
       {% if match != None %}
       <hr />
       <p>
