--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -60,40 +60,16 @@
           <p id="results" class="dropdown"></p>
         </div>
       </h5>
-      {% if main_page_load == False %}
+      {% if main_page_load == True %}
         <div id='main_page_load'></div>
-      {% else %}
+      {% endif %}
+      {% if games_with_odds_load == True %}
+        <div id='games_with_odds_load'>Hello</div>
+      {% endif %}
       {% if each_match == True %}
         <form method='POST' action='/index/'>{% csrf_token %}
           <div id='each_match'></div>
         </form>
-        <!-- <form method='POST' action='/index/'>{% csrf_token %}
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th>Games</th>
-              <th>Home Odds</th>
-              <th>Draw Odds</th>
-              <th>Away Odds</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for odd in odds %}
-              <tr>
-                <td><input type="checkbox" name="accumulator" value="{{ odd.0 }}" /><i name="game" id="games"> - {{ odd.0 }}</i></td>
-                <td><i name="home" id="home_odds">{{ odd.1 }}</i></td>
-                <td><i name="draw" id="draw_odds">{{ odd.2 }}</i></td>
-                <td><i name="away" id="away_odds">{{ odd.3 }}</i></td>
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-        <hr />
-        <p>
-          Stake £: <input id="stake" name="stake" type="text" placeholder="Enter stake here" />
-        </p>
-        <input type="submit" value="Get accumulator" />
-        </form> -->
       {% endif %}
       {% if match != None %}
       <hr />
@@ -144,7 +120,6 @@
           {% endfor %}
         </tbody>
       </table>
-      {% endif %}
       {% endif %}
 
     </div>
