--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -64,7 +64,7 @@
         <div id='main_page_load'></div>
       {% endif %}
       {% if games_with_odds_load == True %}
-        <div id='games_with_odds_load'>Hello</div>
+        <div id='games_with_odds_load'></div>
       {% endif %}
       {% if each_match == True %}
         <form method='POST' action='/index/'>{% csrf_token %}
