--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -121,8 +121,26 @@
         </tbody>
       </table>
       {% endif %}
-
     </div>
+    <!-- <div class="modal" id="accumulator" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal=header">
+            <button class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Login</h4>
+          </div>
+          <div class="modal-body">
+            <p>
+              This is sample
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-primary">Login</button>
+            <button class="btn btn-primary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div> -->
     <div class="col-sm-2 sidenav">
       <!--<div class="well">
         <p>ADS</p>
