--- a/templates/accumulator/index.html
+++ b/templates/accumulator/index.html
@@ -71,6 +71,9 @@
           <div id='each_match'></div>
         </form>
       {% endif %}
+      {% if mad_combos == True %}
+        <div id='mad_combos'></div>
+      {% endif %}
       {% if match != None %}
       <hr />
       <p>
