--- a/templates/accumulator/bookies.html
+++ b/templates/accumulator/bookies.html
@@ -22,9 +22,9 @@
       <td><a href="{% url 'william_hill_update' update_no=1 %}">Click here to update</a></td>
     </tr>
     <tr>
-      <td>Bet365</td>
-      <td>Click to view</td>
-      <td>Click here to update</td>
+      <td>Coral</td>
+      <td><a href="{% url 'coral' update_no=0 %}">Click to view</a></td>
+      <td><a href="{% url 'coral' update_no=1 %}">Click here to update</a></td>
     </tr>
     <tr>
       <td>Bet Victor</td>
